# p2pcserver

./: .dockerignore  Cargo.toml  Dockerfile
src/: main.rs
