[package]
name = "p2pcserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
anyhow = "1.0.56"
serde = "1.0.136"

[profile.release]
opt-level = 3
strip = true
lto = true
